# nnabla-c-runtime

./: .gitignore  CMakeLists.txt  GNUmakefile  NOTICE  PACKAGE_README.md  README.md  VERSION.md  VERSION.txt
build-tools/cmake/: common.cmake  spresense.cmake
build-tools/code-generator/: __init__.py  function_implements.yaml  function_info.json  functions.yaml  functions.yaml.header  generate.py  header_create.py  template.py
build-tools/code-generator/generators/: SUPPORT_STATUS.md.tmpl  config.h.tmpl  dump_function.c.tmpl  function_context.c.tmpl  functions.h.tmpl  generator_SUPPORT_STATUS_md.py  generator_doc_SUPPORT_STATUS_md.py  generator_include_nnablart_config_h.py  generator_include_nnablart_functions_h.py  generator_include_nnablart_network_h.py  generator_src_nnablart_dump_function_c.py  generator_src_nnablart_dump_function_h.py  generator_src_runtime_create_function_context_c.py  generator_src_runtime_function_context_c.py  network.h.tmpl  template_include_nnablart_functions.h  template_include_nnablart_network.h  template_src_nnablart_dump_function.c  template_src_nnablart_dump_function.h  template_src_runtime_create_function_context.c  template_src_runtime_function_context.c
build-tools/code-generator/tools/: create_function_info  create_function_info.py
build-tools/doc/: Doxyfile  footer.html
build-tools/docker/: Dockerfile.auto-format  Dockerfile.build  Dockerfile.document  Dockerfile.multiarch  Dockerfile.test
build-tools/make/: build-with-docker.mk  build.mk
build-tools/msvc/: build.bat
build-tools/test/callback/: function_test_callback.py  save_function_test_result.py
build-tools/test/scripts/: check_api_level.sh  check_function_result.py  create_nnabla_c_runtime_function_test_makefile.py  create_nnabla_c_runtime_mnists_test_makefile.py  diff_function_test_result.py  diff_result.py  exec_all_functions.sh  generate_yaml.py
build-tools/test/valid/: selftest.cpp
doc/: BUILD.md  DEVELOPMENT.md  FILE_FORMAT.md  SAMPLE_PROJECT_SUPPORT_STATUS.md  SUPPORT_STATUS.md  USAGE.md  nnb.dot  nnb_memory.dot
examples/callback/: GNUmakefile  Makefile  callback.c
include/: nnablart.h
include/nnablart/: config.h  functions.h  functions.h.tmpl  network.h  network.h.tmpl  runtime.h
src/functions/: CMakeLists.txt  utilities.c  utilities.h  vector.c  vector.h
src/functions/implements/: affine.c  sigmoid.c  unimplemented.c
src/functions/implements/activation/: binary_tanh.c  celu.c  crelu.c  elu.c  leakyrelu.c  prelu.c  relu.c  selu.c  sigmoid.c  softmax.c  swish.c  tanh.c
src/functions/implements/affine/: affine.c  affine_generic.c  affine_generic.h  affine_internal.h
src/functions/implements/arithmetic/: add2.c  add_scalar.c  arithmetic.c  arithmetic.h  arithmetic_fixed.c  arithmetic_generic.c  div2.c  maximum_scalar.c  minimum_scalar.c  mul2.c  mul_scalar.c  pow2.c  pow_scalar.c  r_div_scalar.c  r_pow_scalar.c  r_sub_scalar.c  sub2.c
src/functions/implements/array/: concatenate.c  flip.c  matrix_diag.c  matrix_diag_part.c  pad.c  reshape.c  shift.c  slice.c  split.c  stack.c  transpose.c
src/functions/implements/logical/: maximum2.c  maximum_scalar.c  minimum2.c  minimum_scalar.c  sign.c
src/functions/implements/math/: abs.c  batch_matmul.c  exp.c  identity.c  log.c  round.c
src/functions/implements/neural_network/: affine.c  average_pooling.c  deconvolution.c  max_pooling.c  pooling.c  pooling.h  sum_pooling.c  unpooling.c
src/functions/implements/neural_network/affine/: affine.c  affine_fixed.h  affine_fixed16.c  affine_fixed8.c  affine_float.c  affine_float.h  affine_generic.c  affine_generic.h  affine_internal.h
src/functions/implements/neural_network/convolution/: binary_connect_convolution.c  binary_weight_convolution.c  convolution.c  convolution_common.c  convolution_float.c  convolution_generic.c  convolution_int16.c  convolution_int8.c  convolution_internal.h  depthwise_convolution.c
src/functions/implements/normalization/: batch_normalization.c  mean_subtraction.c
src/functions/implements/quantization/: binary_connect_affine.c  binary_sigmoid.c  binary_tanh.c  binary_weight_affine.c
src/functions/implements/reduction/: sum.c
src/functions/implements/stochasticity/: dropout.c
src/functions/utilities/: accessor.c  accessor.h  arithmetic.c  arithmetic.h  fixedpoint.c  fixedpoint.h  list.c  list.h  pooling.c  pooling.h  shape.c  shape.h  vector.c  vector.h
src/nnablart/: CMakeLists.txt  dump.c  dump.h  dump_context.c  dump_context.h  dump_function.c  dump_function.c.tmpl  dump_function.h  infer.c  infer.h  main.c
src/runtime/: CMakeLists.txt  context.h  create_function_context.c  function_context.c  function_context.c.tmpl  runtime.c  runtime_internal.c  runtime_internal.h
